correcting responsivity in footer on small device

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -9,7 +9,7 @@
   position: relative;
   width: 100%;
   height: 4.454545em;
-  font-size: 0.5857142rem;
+  font-size: 0.1rem;
   line-height: 1em;
   color: $color-light-grey;
   padding: 0 3vw;
@@ -42,12 +42,17 @@
 
 .cFooter__desiner {
   font-weight: 300;
-  letter-spacing: 0.1em;
+  text-align: right;
+
+  @include bp-medium {
+    letter-spacing: 0.1em;
+  }
 }
 
 .cFooter__desinerName {
   color: $color-text;
   font-weight: 600;
+
   @include bp-medium {
     letter-spacing: 0.1em;
   }
