--- a/src/styles/elements/_html.scss
+++ b/src/styles/elements/_html.scss
@@ -16,7 +16,7 @@ html {
   background: $color-bg;
   color: $color-text;
   font-family: $font-josefin-sans;
-  font-size: 0.677rem; /* [1] */ /* 8.8px */
+  font-size: 0.6rem; /* [1] */ /* 9.6px */
   line-height: 1.6363em; /* [1] */
   min-height: 100%; /* [3] */
   overflow-y: scroll; /* [2] */
